<resources>
    <string name="app_name">MessageApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewProviderFragment">Поставщик - если Вы являетесь поставщиком и готовы предложить хорошую цену</string>
    <string name="descriptionChoiseUser">Заказчик - если Вы в поиске хорошего товара по наименьшей цене</string>
    <string name="chat">Чат</string>
    <string name="myApp">Заявки</string>
    <string name="Create">Создать</string>
    <string name="favorite">Избранное</string>
    <string name="setting">Настройки</string>
    <string name="_87050000000">Рабочий тел: 87050000000</string>
</resources>