<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_baseline_chats"
        android:title="@string/chat"

        />
    <item
        android:id="@+id/nav_myApp"
        android:icon="@drawable/ic_baseline_myapp"
        android:title="@string/myApp"

        />
    <item
        android:id="@+id/nav_create_app"
        android:icon="@drawable/ic_baseline_create"
        android:title="@string/Create"

        />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/favorite"


        />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        />

</menu>